nginx_legacy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openedx-ingress
  namespace: openedx
  annotations:
    kubernetes.io/ingress.class: nginx
    
    # Use staging first if you're rate limited
    # cert-manager.io/cluster-issuer: "letsencrypt-staging"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"

spec:
  tls:
  - hosts:
    - savegb.org
    - cms.savegb.org
    - apps.savegb.org
    secretName: savegb-org-tls

  rules:
  - host: savegb.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lms
            port:
              number: 8000

  - host: cms.savegb.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cms
            port:
              number: 8000

  - host: apps.savegb.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mfe
            port:
              number: 8002
